JPA&MariaDB 연동 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=hello-spring
+
+
+# MariaDB connection settings
+spring.datasource.url=jdbc:mariadb://localhost:3306/#TABLENAME
+spring.datasource.username=#USERNAME
+spring.datasource.password=#PASSWORD
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# Optional: JPA/Hibernate settings (if using JPA)
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
